# sentinel-ml

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
monitoring/: prometheus.yml
scripts/: __init__.py  load_test.py  train_model.py
sentinel_ml/: __init__.py
sentinel_ml/api/: __init__.py  main.py
sentinel_ml/config/: __init__.py  settings.py
sentinel_ml/core/: __init__.py  cache.py  database.py  logging.py
sentinel_ml/dashboard/: __init__.py  api.py
sentinel_ml/features/: __init__.py  engineering.py
sentinel_ml/monitoring/: __init__.py  drift.py
sentinel_ml/pipelines/: __init__.py  training.py
sentinel_ml/tests/: test_pipeline.py
sentinel_ml/utils/: __init__.py
